Java 11 integration - initial commit
Of note:
- compiling Gosu to Java *10* bytecode because ASM tooling is not Java 11 ready yet
- using "single module" mode i.e., not using module-info files
- using Manifold to:
 -- integrate with Java's new module oriented class loaders
 -- parse Java source and support Java interop from source
 -- to dynamically access otherwise inaccessible packages in jdk.compiler, jdk.javadoc, java.base, etc.
- moving much of file system abstraction toward Path-based impl to support new "jrt:" file system for modules

Todo:
- GosuDoc needs to be rewritten to work with Java's new Doclet API (the old one is no longer supported) -- it remains broken until it conforms to new API
- Gosu modules should be completely removed as they no longer serve any purpose
- our ASM shade library is now up to date with ASM 6.2 (Java 10), however it needs to be deployed (I do not have the password for this)
- Consolas font behaves oddly in Lab, investigate